# LoopThief

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/commands/: start.md  wrap.md
docs/: SESSION_BOOT.md  SESSION_LOG.md
docs/00_project_vision/: LOOPTHIEF_DESIGN_BIBLE.md
docs/01_development/: DEVELOPMENT_ROADMAP.md  FOUNDATION_AUDIT_2026-05-20.md  roadmap_v2.md
docs/02_ai_rules/: AI_WORKFLOW_RULES.md  CODEX_COLLABORATION_RULES.md  MAREK_COLLABORATION_RULES.md
docs/03_ui/: UX_AUDIT_FINDINGS.md
docs/04_disk/: MANIFEST_SCHEMA_V1.md
public/worklets/: bitcrusher.worklet.js  fdn-reverb.worklet.js  hermite-flanger.worklet.js  multi-chorus.worklet.js  phaser.worklet.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: fs_browser.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  devices.rs  mod.rs
src/audio/: fxEngine.ts  recordingCapture.ts  sampleEditOps.ts  sampleLibrary.ts  samplerEngine.ts
src/audio/native/: index.ts  monitor.ts  nativeCapture.ts  types.ts
src/audio/worklets/: registry.ts
src/components/: EditableNumber.tsx  EditableText.tsx  useHoldRepeat.ts
src/components/layout/: AppShell.tsx  LayoutEditorOverlay.tsx  LayoutElements.tsx  LayoutElementsBAK.tsx  LcdContent.tsx  ScreenViewport.tsx  TopBar.tsx
src/components/mascot/: MascotPanel.tsx
src/components/navigation/: ModeRail.tsx
src/components/pads/: PadGrid.tsx  PadModePanel.tsx
src/components/transport/: TransportStrip.tsx
src/components/workstation/: BootResumeDialog.tsx  KeyboardShortcuts.tsx  QuitButton.tsx  QuitDialog.tsx  RuntimeClock.tsx  ViewportWarning.tsx
src/disk/: autosaveDb.ts  autosaveScheduler.ts  index.ts  loader.ts  saveAs.ts  types.ts  wavCodec.ts  zipContainer.ts
src/disk/migrations/: index.ts
src/disk/serializers/: all.ts  project.ts  seq.ts
src/layout/: layout.json
src/midi/: access.ts  index.ts  mapping.ts
src/runtime/: environment.ts
src/screens/: ChopScreen.tsx  DiskScreen.tsx  FileBrowserScreen.tsx  MainScreen.tsx  MixScreen.tsx  PadPlayScreen.tsx  PerformanceScreen.tsx  ProgramScreen.tsx  RecordScreen.tsx  ScreenFrame.tsx  SettingsScreen.tsx  SongScreen.tsx  StepScreen.tsx  UtilityScreens.tsx  index.ts  lcdLayout.ts  shared.tsx
src/store/: useAppStore.ts  useLayoutStore.ts
src/styles/: index.css
src/types/: layout.ts  navigation.ts  soundtouchjs.d.ts
src/utils/: padModeLabels.ts
