[package]
name = "loopthief"
version = "1.1.0"
description = "LoopThief — MPC-style sampling instrument and groove workstation"
authors = ["Marek Barski"]
edition = "2021"

[lib]
name = "loopthief_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Note: NO `devtools` feature listed here. Tauri 2 auto-enables WebView2
# devtools in dev builds via `cfg(debug_assertions)`, so F12 / right-click
# Inspect work during `npm run tauri dev`. Release builds (`cargo build
# --release` via `npm run tauri build`) do NOT have devtools compiled in,
# so F12 does nothing in the shipped .exe. Adding `"devtools"` to the
# features list here would force devtools into release builds too —
# we don't want that for shipping.
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Save dialog backend swap — see lib.rs `save_file_dialog` command.
# tauri-plugin-dialog's rfd-based IFileSaveDialog path has a ~2-3 s lag in
# release builds; native-dialog uses a lighter path that opens instantly.
# Still using tauri-plugin-dialog for the OPEN flow (instant either way).
native-dialog = "0.7"

# ===== Native audio capture (WASAPI on Windows, PipeWire on Linux) =====
# Phase 1 of the WASAPI-loopback migration. Replaces browser
# getDisplayMedia/getUserMedia for the Tauri build so users can sample
# system audio without permission popups + with sub-10ms latency.
#
# Why cpal (not direct windows-rs WASAPI): cpal is the documented fallback
# in the Phase 1 spec for "direct bindings too complex for one session".
# Direct WASAPI = 6-8 h of COM + IAudioClient + IAudioCaptureClient setup
# before first sound. cpal wraps WASAPI thinly with loopback support on
# Windows (output-device-as-input pattern) and PulseAudio/PipeWire on Linux.
# Quality cost is marginal — cpal is used by rodio, kira, etc.
cpal = "0.15"
ringbuf = "0.4"
crossbeam-channel = "0.5"

# Full release-build optimisation. Slower compile (~2-3× vs default)
# but smaller / faster runtime. Marek's hypothesis: this may shrink the
# 3 s dialog-open lag if any of the cost lives in non-LTO'd plugin code.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# panic=abort: smaller binary, faster unwinding (no panic recovery overhead).
# All Tauri 2 crates + cpal + native-dialog tolerate this. If a future
# dependency requires unwind support, drop just this line.
panic = "abort"
